# vesta

./: CMakeLists.txt  __init__.py  plot_chi2.py  run_all_g+ps.py
cmake/: FindCasaCore.cmake
vesta_clib/: CommonCuda.cu  CommonCuda.h  DiskAndDeltaCost.cpp  DiskAndDeltaCost.h  DiskCost.cpp  DiskCost.h  GaussianCostFunction.cpp  GaussianCostFunction.h  GaussianCostFunctionCircular.cpp  GaussianCostFunctionCircular.h  GaussianCostFunctionCircularAndPointSource.cpp  GaussianCostFunctionCircularAndPointSource.h  GaussianCostFunctionCircularCuda.cu  GaussianCostFunctionCircularCuda.h  PointSourceCostFunction.cpp  PointSourceCostFunction.h  chi2.cpp  gaussfit.cpp  main.cpp  ndarray.h  problem_setup.cpp  problem_setup.h  read_data.cpp  read_data.h
